syntax = "proto3";

package dep2p.rendezvous;

option go_package = "github.com/dep2p/go-dep2p/pkg/proto/rendezvous";

import "google/protobuf/timestamp.proto";

// ============================================================================
//                              消息类型
// ============================================================================

// MessageType Rendezvous 消息类型
enum MessageType {
    MESSAGE_TYPE_UNSPECIFIED = 0;
    
    // 注册请求/响应
    MESSAGE_TYPE_REGISTER = 1;
    MESSAGE_TYPE_REGISTER_RESPONSE = 2;
    
    // 取消注册请求/响应
    MESSAGE_TYPE_UNREGISTER = 3;
    MESSAGE_TYPE_UNREGISTER_RESPONSE = 4;
    
    // 发现请求/响应
    MESSAGE_TYPE_DISCOVER = 5;
    MESSAGE_TYPE_DISCOVER_RESPONSE = 6;
}

// ResponseStatus 响应状态
enum ResponseStatus {
    RESPONSE_STATUS_UNSPECIFIED = 0;
    RESPONSE_STATUS_OK = 1;
    RESPONSE_STATUS_E_INVALID_NAMESPACE = 100;
    RESPONSE_STATUS_E_INVALID_TTL = 101;
    RESPONSE_STATUS_E_INVALID_COOKIE = 102;
    RESPONSE_STATUS_E_NOT_AUTHORIZED = 103;
    RESPONSE_STATUS_E_INTERNAL_ERROR = 200;
    RESPONSE_STATUS_E_UNAVAILABLE = 201;
}

// ============================================================================
//                              核心消息
// ============================================================================

// Message Rendezvous 协议消息
message Message {
    // type 消息类型
    MessageType type = 1;
    
    // 请求消息（根据类型选择其一）
    Register register = 2;
    Unregister unregister = 3;
    Discover discover = 4;
    
    // 响应消息（根据类型选择其一）
    RegisterResponse register_response = 5;
    DiscoverResponse discover_response = 6;
}

// ============================================================================
//                              注册消息
// ============================================================================

// Register 注册请求
message Register {
    // namespace 命名空间
    // 格式示例:
    //   - "blockchain/mainnet/peers"
    //   - "<realm_id>/topic/<name>"
    //   - "service/<service_type>"
    string namespace = 1;
    
    // peer_id 注册节点ID (32字节)
    bytes peer_id = 2;
    
    // addrs 节点地址列表 (multiaddr 格式)
    repeated string addrs = 3;
    
    // ttl 注册有效期 (秒)
    // 0 表示使用服务端默认值
    uint64 ttl = 4;
    
    // signed_record 可选的签名记录
    // 用于验证注册者身份
    bytes signed_record = 5;
}

// RegisterResponse 注册响应
message RegisterResponse {
    // status 响应状态
    ResponseStatus status = 1;
    
    // status_text 状态说明文本
    string status_text = 2;
    
    // ttl 实际使用的 TTL (秒)
    // 服务端可能会调整客户端请求的 TTL
    uint64 ttl = 3;
}

// ============================================================================
//                              取消注册消息
// ============================================================================

// Unregister 取消注册请求
message Unregister {
    // namespace 命名空间
    string namespace = 1;
    
    // peer_id 节点ID
    bytes peer_id = 2;
}

// UnregisterResponse 取消注册响应
// 复用 RegisterResponse

// ============================================================================
//                              发现消息
// ============================================================================

// Discover 发现请求
message Discover {
    // namespace 命名空间
    string namespace = 1;
    
    // limit 最大返回数量
    // 0 表示使用服务端默认值
    uint64 limit = 2;
    
    // cookie 分页 cookie
    // 用于获取下一页结果，首次请求为空
    bytes cookie = 3;
}

// DiscoverResponse 发现响应
message DiscoverResponse {
    // status 响应状态
    ResponseStatus status = 1;
    
    // status_text 状态说明文本
    string status_text = 2;
    
    // registrations 注册列表
    repeated Registration registrations = 3;
    
    // cookie 下一页 cookie
    // 为空表示没有更多结果
    bytes cookie = 4;
}

// ============================================================================
//                              注册记录
// ============================================================================

// Registration 注册记录
message Registration {
    // namespace 命名空间
    string namespace = 1;
    
    // peer_id 节点ID
    bytes peer_id = 2;
    
    // addrs 节点地址列表
    repeated string addrs = 3;
    
    // ttl 剩余有效期 (秒)
    uint64 ttl = 4;
    
    // registered_at 注册时间
    google.protobuf.Timestamp registered_at = 5;
    
    // signed_record 可选的签名记录
    bytes signed_record = 6;
}

